--- a/styles/style.css
+++ b/styles/style.css
@@ -20,31 +20,12 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
-  height: 100vh;
-}
-
-.hyperlink {
-  text-decoration: none;
-  text-shadow: 2px 2px 0 var(--accent-color);
-}
-
-.hyperlink:hover {
-  text-decoration: underline;
-}
-
-.hyperlink:focus {
-  outline: none;
-}
-
-.hyperlink:focus-visible {
-  outline: 1px solid var(--hyperlink-outline);
 }
 
 .header {
   display: grid;
   justify-self: space-between;
-  /*height: 100vh;*/
+
   margin: 0;
   padding: 0;
 }
@@ -52,16 +33,12 @@ html {
 @media (min-width: 1024px) {
   .header__theme-menu {
       display: grid;
-      grid-template-columns: auto 8px;
+      grid-template-columns: auto 26px;
       align-items: center;
-      margin-block-start: 17px;
+      margin-block-start: 20px;
   }
 
   .header__theme-menu-list {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    margin: 0;
       grid-area: 1 / 1 / 2 / 2;
       text-align: center;
       min-width: 230px;
@@ -77,6 +54,13 @@ html {
       margin: 0 20px 0 0;
   }
 
+  .header__theme-menu-list {
+      display: flex;
+      flex-direction: row;
+
+      list-style-type: none;
+      margin: 0;
+  }
   .header__theme-menu-item {
       width: 70px;
   }
@@ -115,10 +99,6 @@ html {
 .page.theme_light .icon-text {
   display: none;
 }
-.page.theme_auto .icon-text {
-  display: none;
-}
-
 
 .icon-top {
   display: block;
@@ -163,8 +143,7 @@ html {
 
 @media (768px <= width <1024px) {
   .header__theme-menu-list {
-      margin: 145px 20px 0 0;
-      gap: 14px;
+      margin: 144px 20px 0 0;
   }
 }
 
@@ -192,11 +171,6 @@ html {
   text-decoration: underline;
 }
 
-.header__theme-menu-button_active {
-  pointer-events: none;
-  outline: var(--nav-outline);
-}
-
 .header__theme-menu-item {
   color: var(--navigagtion-text-color);
 }
@@ -222,23 +196,14 @@ html {
 @media (768px <= width < 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 180px 0 160px 0;
-  }
-}
-
-@media (min-width: 1024px) {
-  .page.theme_light .heading-tittle {
-      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 293px 0 130px 0;
-      text-shadow: 4px 4px 0 #FF0070;
+      margin: 174px 0 158px 0;
   }
 }
 
 @media (min-width: 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 293px 0 130px 0;
-
+      margin: 300px 0 127px 0;
   }
 }
 
@@ -257,9 +222,9 @@ html {
 
 @media (768px <= width < 1024px) {
   .introduction {
-      width: 364px;
+    width: 355px;
       height: fit-content;
-      margin: 0 20px 108px 0;
+      margin: 0 20px 100px 0;
   }
 }
 
@@ -267,7 +232,7 @@ html {
   .introduction {
       width: 491px;
       height: fit-content;
-      margin: 0 20px 67px 0;
+      margin-right: 20px;
   }
 }
 
@@ -280,15 +245,9 @@ html {
   border-bottom: 1px solid #ff0070;
 }
 
-@media (width >= 768px) {
+@media (width >=768px) {
   .icon-bottom {
       margin-left: 20px;
-  }
-}
-
-@media (width >= 1024px) {
-  .icon-bottom {
-      margin: 20px 0 0 20px;
   }
 }
 
@@ -308,6 +267,7 @@ html {
   margin: 48px 0 0 0;
 }
 
+
 .second-block .subtitle {
   margin: 52px 0 20px 0;
 }
@@ -315,6 +275,7 @@ html {
 .third-block .subtitle {
   margin: 48px 0 20px 0;
 }
+
 
 .item-heading {
   background-color: var(--accent-color);
@@ -330,7 +291,6 @@ html {
   background-color: var(--accent-color);
   color: var(--accent-text-color);
   font-weight: 700;
-  margin: 0;
 }
 
 .main-text {
@@ -342,95 +302,82 @@ html {
   font-weight: 400;
 }
 
-main {
+.main {
   margin: 0 10px 0 10px;
 }
 
 @media (width >= 768px) {
-  main {
-      margin: 0 20px 0 20px;
+  .main {
+    margin: 0 20px 0 20px;
   }
 }
 
-@media (width >= 768px) {
+/*@media (375px <= width < 768px) {
   .first-block {
       display: grid;
-      grid-template-columns: auto auto; 
-      grid-template-rows: auto auto; 
+      margin: 0;
+  }
+} what for */
+
+@media (768px <= width < 1024px) {
+  .first-block {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      /*grid-template-columns: auto auto;  Две колонки */
+      grid-template-rows: auto auto; /* Две строки */
+
       grid-column-gap: 20px;
       margin: 80px 0 0 0;
   }
 
   .first-block .subtitle {
-      grid-column: 1;
-      width: 236px;
+    grid-column: 1; 
       margin: 0;
-   
+  }
+
+  .first-block .item-heading  {
+    margin: 20px;
   }
 
   .first-block .item-heading,
   .first-block .main-text {
-      grid-column: 2;
-      height: fit-content;
-      margin: 0;
+    grid-column: 2; 
+  height: fit-content;
+  margin: 0;
   }
 
-  .first-heading,
-  .first-text {
-      grid-area: 1;
-  }
-  .first-heading {
-      margin-top: 0;
-  }
-  .first-text {
-      padding: 32px 0 20px 0;
-  }
-
-  .first-block .item-heading {
-      margin: 0 0 8px 0;
-  }
+.second-block {
+  margin-block-start: 80px;
 }
 
-@media (width >= 1024px) {
-  .first-block {
-    margin-block-start: 82px;
-  }
-  .first-block .subtitle {
-    width: 315px;
+.second-block .subtitle {
+max-width: 236px;
+}
 }
 
-.first-text {
-padding-top: 32px;
-padding-bottom: 20px;
+/*@media ( width < 1024px) {
+.second-block   {
+display: grid;
+margin: 40px 0 0 0;
 }
 
-}
+.second-block .subtitle   {
+ margin: 10 0 0px 0;
+    }
+} сейчас добавила*/
 
-@media (768px <= width < 1024px) {
-  .second-block {
-      margin-block-start: 70px;
-  }
-  .second-block .subtitle {
-      max-width: 236px;
-  }
-
-  .second-block .item-heading {
-      margin: 10px 0 10px 0;
-  }
-}
-
-@media (width >= 1024px) {
+@media (width > 1024px) {
   .second-block {
       display: grid;
       grid-auto-flow: column;
       column-gap: 20px;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: auto auto auto;
-      margin: 75px 0 0 0;
+      margin: 60px 0 0 0;
   }
 
   .second-block .subtitle {
-      margin: 10px 0 0 0;
+      margin: 0 0 20px 0;
       grid-column: 1 / span 3;
       max-width: 33%;
   }
@@ -440,19 +387,11 @@ padding-bottom: 20px;
   margin: 25px 0 0 0;
 }
 
-.normal-weight-heading {
-  font-weight: 400;
-font-size: 18px;
-line-height: 23.4px;
-
-}
-
-
 @media (768px <= width) {
   .third-block {
       display: grid;
       grid-template-columns: 1fr 2fr;
-      margin: 77px 0 0 0;
+      margin: 60px 0 0 0;
       grid-column-gap: 20px;
   }
 
@@ -460,31 +399,12 @@ line-height: 23.4px;
       grid-row: span 11;
       margin: 0;
   }
-  .third-block .item-heading {
-    margin: 20px 0 12px 0;
-  }
-
-  .third-block .main-text {
-    width: 472px;
-  }
-
 }
 
-
-
-@media (width >= 1024px) {
-  .third-block {
-    margin-block-start: 75px;
-  }
-
-
-  .third-block .main-text {
-    width: 650px;
-  }
-
-  .third-block .item-heading {
-    margin: 20px 0 10px 0;
-  }
+.last-item-heading {
+  margin: 0 0 20px 0;
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .section__image {
@@ -492,7 +412,7 @@ line-height: 23.4px;
   object-fit: cover;
   object-position: center;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100%; 
 }
 
 .item-heading-pictures {
@@ -509,17 +429,13 @@ line-height: 23.4px;
   display: grid;
   margin: 10px 0 0 0;
   gap: 10px;
+
 }
 
 @media (width >= 768px) {
-
-  .item-heading-pictures {
-    margin: 75px 0 10px 0;
-  } 
-
   .pictures {
       display: grid;
-      gap: 20px; 
+      gap: 20px; /* Отступ между ячейками */
       margin: 20px 0 0 0;
       object-fit: cover;
       grid-template-areas:
@@ -549,8 +465,6 @@ line-height: 23.4px;
   }
 }
 
-
-
 .footer {
   display: flex;
   width: 100%;
@@ -562,7 +476,6 @@ line-height: 23.4px;
 
 @media (768px <= width < 1024px) {
   .footer {
-    margin: 73px 0 0 0;
       min-height: 1024px;
   }
 }
@@ -601,26 +514,25 @@ line-height: 23.4px;
   text-shadow: 4px 4px 0 var(--accent-color);
   width: 100%;
   text-align: center;
-  margin: 0;
 }
 
 @media (375px <= width < 768px) {
   .footer-title {
       font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-      margin: 70px 0 55px 0;
+      margin: 70px 0 55px 10px;
   }
 }
 
 @media (768px <= width < 1024px) {
   .footer-title {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 155px 0 162px 0;
+      margin: 173px 0 162px 0;
   }
 }
 
 @media (min-width: 1024px) {
   .footer-title {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 180px 0 130px 0;
+      margin: 273px 0 130px 0;
   }
 }
