--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,31 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
+}
+
+.hyperlink {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.hyperlink:hover {
+  text-decoration: underline;
+}
+
+.hyperlink:focus {
+  outline: none;
+}
+
+.hyperlink:focus-visible {
+  outline: 1px solid var(--hyperlink-outline);
 }
 
 .header {
   display: grid;
   justify-self: space-between;
-
+  /*height: 100vh;*/
   margin: 0;
   padding: 0;
 }
@@ -33,12 +52,16 @@ html {
 @media (min-width: 1024px) {
   .header__theme-menu {
       display: grid;
-      grid-template-columns: auto 26px;
+      grid-template-columns: auto 8px;
       align-items: center;
-      margin-block-start: 20px;
+      margin-block-start: 17px;
   }
 
   .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    margin: 0;
       grid-area: 1 / 1 / 2 / 2;
       text-align: center;
       min-width: 230px;
@@ -54,13 +77,6 @@ html {
       margin: 0 20px 0 0;
   }
 
-  .header__theme-menu-list {
-      display: flex;
-      flex-direction: row;
-
-      list-style-type: none;
-      margin: 0;
-  }
   .header__theme-menu-item {
       width: 70px;
   }
@@ -99,6 +115,10 @@ html {
 .page.theme_light .icon-text {
   display: none;
 }
+.page.theme_auto .icon-text {
+  display: none;
+}
+
 
 .icon-top {
   display: block;
@@ -143,7 +163,8 @@ html {
 
 @media (768px <= width <1024px) {
   .header__theme-menu-list {
-      margin: 144px 20px 0 0;
+      margin: 145px 20px 0 0;
+      gap: 14px;
   }
 }
 
@@ -171,6 +192,11 @@ html {
   text-decoration: underline;
 }
 
+.header__theme-menu-button_active {
+  pointer-events: none;
+  outline: var(--nav-outline);
+}
+
 .header__theme-menu-item {
   color: var(--navigagtion-text-color);
 }
@@ -196,14 +222,23 @@ html {
 @media (768px <= width < 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 174px 0 158px 0;
+      margin: 180px 0 160px 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .page.theme_light .heading-tittle {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+      margin: 293px 0 130px 0;
+      text-shadow: 4px 4px 0 #FF0070;
   }
 }
 
 @media (min-width: 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 300px 0 127px 0;
+      margin: 293px 0 130px 0;
+
   }
 }
 
@@ -222,9 +257,9 @@ html {
 
 @media (768px <= width < 1024px) {
   .introduction {
-    width: 355px;
+      width: 364px;
       height: fit-content;
-      margin: 0 20px 100px 0;
+      margin: 0 20px 108px 0;
   }
 }
 
@@ -232,7 +267,7 @@ html {
   .introduction {
       width: 491px;
       height: fit-content;
-      margin-right: 20px;
+      margin: 0 20px 67px 0;
   }
 }
 
@@ -245,9 +280,15 @@ html {
   border-bottom: 1px solid #ff0070;
 }
 
-@media (width >=768px) {
+@media (width >= 768px) {
   .icon-bottom {
       margin-left: 20px;
+  }
+}
+
+@media (width >= 1024px) {
+  .icon-bottom {
+      margin: 20px 0 0 20px;
   }
 }
 
@@ -267,7 +308,6 @@ html {
   margin: 48px 0 0 0;
 }
 
-
 .second-block .subtitle {
   margin: 52px 0 20px 0;
 }
@@ -275,7 +315,6 @@ html {
 .third-block .subtitle {
   margin: 48px 0 20px 0;
 }
-
 
 .item-heading {
   background-color: var(--accent-color);
@@ -291,6 +330,7 @@ html {
   background-color: var(--accent-color);
   color: var(--accent-text-color);
   font-weight: 700;
+  margin: 0;
 }
 
 .main-text {
@@ -302,82 +342,95 @@ html {
   font-weight: 400;
 }
 
-.main {
+main {
   margin: 0 10px 0 10px;
 }
 
 @media (width >= 768px) {
-  .main {
-    margin: 0 20px 0 20px;
+  main {
+      margin: 0 20px 0 20px;
   }
 }
 
-/*@media (375px <= width < 768px) {
+@media (width >= 768px) {
   .first-block {
       display: grid;
-      margin: 0;
-  }
-} what for */
-
-@media (768px <= width < 1024px) {
-  .first-block {
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-      /*grid-template-columns: auto auto;  Две колонки */
-      grid-template-rows: auto auto; /* Две строки */
-
+      grid-template-columns: auto auto; 
+      grid-template-rows: auto auto; 
       grid-column-gap: 20px;
       margin: 80px 0 0 0;
   }
 
   .first-block .subtitle {
-    grid-column: 1; 
+      grid-column: 1;
+      width: 236px;
       margin: 0;
-  }
-
-  .first-block .item-heading  {
-    margin: 20px;
+   
   }
 
   .first-block .item-heading,
   .first-block .main-text {
-    grid-column: 2; 
-  height: fit-content;
-  margin: 0;
+      grid-column: 2;
+      height: fit-content;
+      margin: 0;
   }
 
-.second-block {
-  margin-block-start: 80px;
+  .first-heading,
+  .first-text {
+      grid-area: 1;
+  }
+  .first-heading {
+      margin-top: 0;
+  }
+  .first-text {
+      padding: 32px 0 20px 0;
+  }
+
+  .first-block .item-heading {
+      margin: 0 0 8px 0;
+  }
 }
 
-.second-block .subtitle {
-max-width: 236px;
-}
-}
-
-/*@media ( width < 1024px) {
-.second-block   {
-display: grid;
-margin: 40px 0 0 0;
+@media (width >= 1024px) {
+  .first-block {
+    margin-block-start: 82px;
+  }
+  .first-block .subtitle {
+    width: 315px;
 }
 
-.second-block .subtitle   {
- margin: 10 0 0px 0;
-    }
-} сейчас добавила*/
+.first-text {
+padding-top: 32px;
+padding-bottom: 20px;
+}
 
-@media (width > 1024px) {
+}
+
+@media (768px <= width < 1024px) {
+  .second-block {
+      margin-block-start: 70px;
+  }
+  .second-block .subtitle {
+      max-width: 236px;
+  }
+
+  .second-block .item-heading {
+      margin: 10px 0 10px 0;
+  }
+}
+
+@media (width >= 1024px) {
   .second-block {
       display: grid;
       grid-auto-flow: column;
       column-gap: 20px;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: auto auto auto;
-      margin: 60px 0 0 0;
+      margin: 75px 0 0 0;
   }
 
   .second-block .subtitle {
-      margin: 0 0 20px 0;
+      margin: 10px 0 0 0;
       grid-column: 1 / span 3;
       max-width: 33%;
   }
@@ -387,11 +440,19 @@ margin: 40px 0 0 0;
   margin: 25px 0 0 0;
 }
 
+.normal-weight-heading {
+  font-weight: 400;
+font-size: 18px;
+line-height: 23.4px;
+
+}
+
+
 @media (768px <= width) {
   .third-block {
       display: grid;
       grid-template-columns: 1fr 2fr;
-      margin: 60px 0 0 0;
+      margin: 77px 0 0 0;
       grid-column-gap: 20px;
   }
 
@@ -399,20 +460,40 @@ margin: 40px 0 0 0;
       grid-row: span 11;
       margin: 0;
   }
+  .third-block .item-heading {
+    margin: 20px 0 12px 0;
+  }
+
+  .third-block .main-text {
+    width: 472px;
+  }
+
 }
 
-.last-item-heading {
-  margin: 0 0 20px 0;
-  font-weight: 700;
-  font-size: 18px;
+
+
+@media (width >= 1024px) {
+  .third-block {
+    margin-block-start: 75px;
+  }
+
+
+  .third-block .main-text {
+    width: 650px;
+  }
+
+  .third-block .item-heading {
+    margin: 20px 0 10px 0;
+  }
 }
 
 .section__image {
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
   min-width: 100%;
-  min-height: 100%; 
+  min-height: 100%;
 }
 
 .item-heading-pictures {
@@ -429,13 +510,18 @@ margin: 40px 0 0 0;
   display: grid;
   margin: 10px 0 0 0;
   gap: 10px;
-
+height: fit-content;
 }
 
 @media (width >= 768px) {
+
+  .item-heading-pictures {
+    margin: 75px 0 10px 0;
+  } 
+
   .pictures {
       display: grid;
-      gap: 20px; /* Отступ между ячейками */
+      gap: 20px; 
       margin: 20px 0 0 0;
       object-fit: cover;
       grid-template-areas:
@@ -465,6 +551,8 @@ margin: 40px 0 0 0;
   }
 }
 
+
+
 .footer {
   display: flex;
   width: 100%;
@@ -476,6 +564,7 @@ margin: 40px 0 0 0;
 
 @media (768px <= width < 1024px) {
   .footer {
+    margin: 73px 0 0 0;
       min-height: 1024px;
   }
 }
@@ -514,25 +603,26 @@ margin: 40px 0 0 0;
   text-shadow: 4px 4px 0 var(--accent-color);
   width: 100%;
   text-align: center;
+  margin: 0;
 }
 
 @media (375px <= width < 768px) {
   .footer-title {
       font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-      margin: 70px 0 55px 10px;
+      margin: 70px 0 55px 0;
   }
 }
 
 @media (768px <= width < 1024px) {
   .footer-title {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 173px 0 162px 0;
+      margin: 155px 0 162px 0;
   }
 }
 
 @media (min-width: 1024px) {
   .footer-title {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 273px 0 130px 0;
+      margin: 180px 0 130px 0;
   }
 }
