--- a/styles/style.css
+++ b/styles/style.css
@@ -227,16 +227,12 @@ html {
 
 @media (min-width: 1024px) {
   .page.theme_light .heading-tittle {
-      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 293px 0 130px 0;
       text-shadow: 4px 4px 0 #FF0070;
   }
-}
 
-@media (min-width: 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 293px 0 130px 0;
+      margin: 293px 0 120px 0;
 
   }
 }
@@ -266,7 +262,7 @@ html {
   .introduction {
       width: 491px;
       height: fit-content;
-      margin: 0 20px 67px 0;
+      margin: 0 20px 65px 0;
   }
 }
 
@@ -347,7 +343,31 @@ main {
 
 @media (width >= 768px) {
   main {
-      margin: 345px 20px 0 20px;
+      margin: 330px 20px 0 20px;
+  }
+}
+
+@media (width >= 1024px) {
+  main {
+      margin: 70px 20px 0 20px;
+  }
+}
+
+@media (width >= 1024px) {
+  .first-block {
+      margin: 0px 0 0 0;
+  }
+}
+
+@media (768px <= width < 1024px) {
+  .first-block {
+      margin: 0px 0 0 0;
+  }
+}
+
+@media (width >= 1024px) {
+  .first-block {
+      margin: 0px 0 0 0;
   }
 }
 
@@ -357,7 +377,6 @@ main {
       grid-template-columns: auto auto; 
       grid-template-rows: auto auto; 
       grid-column-gap: 20px;
-      margin: 80px 0 0 0;
   }
 
   .first-block .subtitle {
@@ -391,9 +410,7 @@ main {
 }
 
 @media (width >= 1024px) {
-  .first-block {
-    margin-block-start: 82px;
-  }
+
   .first-block .subtitle {
     width: 315px;
 }
