--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ html {
 .header {
   display: grid;
   justify-self: space-between;
-  height: 100vh;
+  /*height: 100vh;*/
   margin: 0;
   padding: 0;
 }
@@ -207,21 +207,20 @@ html {
   line-height: 96px;
   text-align: left;
   text-shadow: 4px 4px 0 var(--accent-color);
-  margin: 70px 0 55px 10px;
   padding: 0;
 }
 
 @media (375px <= width < 768px) {
   .heading-tittle {
       font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-      margin: 70px 0 55px 10px;
+      margin: 65px 0 55px 10px;
   }
 }
 
 @media (768px <= width < 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 180px 0 160px 0;
+      margin: 170px 0 160px 0;
   }
 }
 
