--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ html {
 .header {
   display: grid;
   justify-self: space-between;
-  height: 100vh;
+ /* height: 100vh;*/
   margin: 0;
   padding: 0;
 }
@@ -220,7 +220,7 @@ html {
 @media (768px <= width < 1024px) {
   .heading-tittle {
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-      margin: 170px 0 160px 0;
+      margin: 175px 0 160px 0;
   }
 }
 
@@ -253,7 +253,7 @@ html {
   .introduction {
       width: 364px;
       height: fit-content;
-      margin: 0 20px 108px 0;
+      margin: 0 20px 115px 0;
   }
 }
 
@@ -400,7 +400,7 @@ main {
 
 @media (768px <= width < 1024px) {
   .second-block {
-      margin-block-start: 70px;
+      margin-block-start: 85px;
   }
   .second-block .subtitle {
       max-width: 236px;
