--- a/styles/style.css
+++ b/styles/style.css
@@ -246,7 +246,7 @@ html {
   background-color: var(--accent-color);
   color: var(--accent-text-color);
   justify-self: end;
-  margin: 0 10px 5px 0;
+  margin: 0 10px 0 0;
 }
 
 @media (768px <= width < 1024px) {
@@ -269,7 +269,7 @@ html {
   display: block;
   width: 25px;
   height: 25px;
-  margin: 25px 0 0 10px;
+  margin: 20px 0 0 10px;
   border-left: 1px solid #ff0070;
   border-bottom: 1px solid #ff0070;
 }
