--- a/styles/style.css
+++ b/styles/style.css
@@ -299,7 +299,7 @@ html {
 }
 
 .first-block .subtitle {
-  margin: 48px 0 0 0;
+  margin: 0 0 0 0;
 }
 
 .second-block .subtitle {
@@ -337,8 +337,9 @@ html {
 }
 
 main {
-  margin: 0 10px 0 10px;
+  margin: 40px 10px 0 10px;
 }
+
 @media (min-width: 768px) {
   main {
       margin: 80px 20px 0 20px;
