--- a/styles/style.css
+++ b/styles/style.css
@@ -50,15 +50,22 @@ html {
     grid-template-rows:  1fr min-content 1fr;
 width: 100%;
     height: 100vh;
+    min-height: 668px;
     margin: 0 20px 0 0;
     padding: 0;
 }
 
+@media (min-width: 768px) {
+    .header {
+      min-height: 1024px;
+  
+    }
+  }
 
 @media (min-width: 1024px) {
   .header {
     min-height: 768px;
-    height: 100vh;
+
   }
 }
 
