--- a/styles/style.css
+++ b/styles/style.css
@@ -156,13 +156,34 @@ top: 9px;
 .header__theme-menu {
   grid-row: 1;
   grid-column: 1;
+  margin-right: 10px;
 }
 
-@media (width >= 768px) {
-.header__theme-menu {
-  margin-block-start: 20px;
+.header__theme-menu-list {
+    display: flex;
+    align-items: end;
+    flex-direction: column;
+    list-style-type: none;
+    gap: 10px;
+    padding: 0;
 }
+
+@media (max-width: 768px) {
+    .header__theme-menu {
+        align-self: center; 
+    }
+    }
+
+
+
+
+@media (min-width: 768px) {
+    .header__theme-menu {
+        align-self: center; 
+        margin-right: 20px;
+      }
 }
+
 
 
 
@@ -170,16 +191,14 @@ top: 9px;
 
   .header__theme-menu {
     width: 100%;
-    justify-content: center ;
+  align-self: start;
+  margin-block-start: 20px;
+
   }
 
-  .header__theme-menu-list {  /*вынести эти правила*/
+  .header__theme-menu-list { 
       display: flex;
       flex-direction: row;
-      list-style-type: none;
-      margin: 0;
-      width: 100%;
-      text-align: center;
       justify-content: center;
       min-width: 230px;
   }
@@ -188,28 +207,6 @@ top: 9px;
 
 
 
-@media (width <1024px) {
-    .header__theme-menu-list {
-        display: flex;
-        align-items: stretch;
-        flex-direction: column;
-        list-style-type: none;
-        text-align: end;
-        gap: 10px;
-        margin: 39px 10px 0 0;
-
-        padding: 0;
-    
-    }
-}
-
-@media (768px <= width <1024px) {
-    .header__theme-menu-list {
-        margin: 145px 20px 0 0;
-        gap: 14px;
-       
-    }
-}
 
 .header__theme-menu-button {
     font-family: IBM Plex Mono, Arial, sans-serif;
